--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <h3 style="margin-top: 20px;" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="3000">Welcome To</h3>
                 <h3 data-aos="fade-down" data-aos-easing="linear" data-aos-duration="3000">The Wedding Celebration of</h3>
-                <h4 data-aos="zoom-in data-aos-easing="linear" data-aos-duration="3000" >Ade & Yunita</h4>    
+                <h4 data-aos="zoom-in" data-aos-easing="linear" data-aos-duration="3000" >Ade & Yunita</h4>    
                 <h3 data-aos="fade-up" data-aos-easing="linear" data-aos-duration="3000">Senin, 12 Juni 2022</h3>            
                 <a href="#"  onclick="toggle(), playing()" data-aos="zoom-in" data-aos-duration="3000">
                     <img src="asset/image/open_inv.png" alt="" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="3000">
