--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="pengantin1">
         <div class="frame-relative" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="3000">
             <img src="asset/image/frame-cewe.png" alt="">
-            <div class="detail-abs1" data-aos="fade-left" data-aos-easing="linear" data-aos-duration="3000">
+            <div class="detail-abs1" data-aos="fade-right data-aos-easing="linear" data-aos-duration="3000">
                 <p>The Bride:</p>
                 <img class="pengantin-profpic" src="asset/image/cewe.png" alt="">
                 <!-- <p class="nama">Yunita</p> -->
